--- a/cinema_service/Dockerfile
+++ b/cinema_service/Dockerfile
@@ -5,23 +5,23 @@ ENV PYTHONUNBUFFERED 1
 
 WORKDIR app/
 
+
 COPY requirements.txt requirements.txt
 
-RUN apt-get update \
-    && apt-get -y install libpq-dev gcc
+RUN apt-get update && apt-get -y install libpq-dev gcc
 
 RUN pip install -r requirements.txt
 
 COPY . .
 
-RUN mkdir -p /vol/web/media
+RUN mkdir -p /vol/app/media
 
 RUN adduser \
-        --disabled-password \
-        --no-create-home \
-        django-user
+    --disabled-password \
+    --no-create-home \
+    django-user
 
 RUN chown -R django-user:django-user /vol/
-RUN chmod -R 755 /vol/web/
+RUN chmod -R 755 /vol/app/
 
 USER django-user
