--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
     app:
         build:
-            context: .
+            context: cinema_service
         ports:
             - "8000:8000"
         volumes:
