--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
 version: "3"
 services:
     app:
-        build:
-            context: cinema_service
+        image: py-dockerize-cinema-app
         ports:
             - "8000:8000"
         volumes:
             - ./:/app
         command: >
             sh -c " python manage.py wait_for_db &&
-                      python manage.py migrate &&
-                      python manage.py runserver 0.0.0.0:8000"
+                    python manage.py migrate &&
+                    python manage.py runserver 0.0.0.0:8000"
         env_file:
           - .env
 
